# ai-dlc

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ai_dlc_tool_evolution_plan.md  aidlc_restructure_plan.md  pyproject.toml
.claude/commands/: sync_template_files.md
.github/workflows/: ci.yml
ai_dlc_prompts_stage0.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cli/: __init__.py  llm_client.py  main.py  redact_utils.py  template_generation_utils.py  validation_utils.py
cli/prompt_skeletons/: skeleton.j2
crates/ai-dlc-cli/: Cargo.toml  README.md
crates/ai-dlc-cli/embedded-templates/claude/: README.md
crates/ai-dlc-cli/embedded-templates/claude/.claude/agents/: README.md
crates/ai-dlc-cli/embedded-templates/claude/.claude/hooks/: post-tool-notify.sh  quality-gate.sh
crates/ai-dlc-cli/src/: main.rs
docs/: phase_1_rust.md
docs/guides/: jinja2_template_generation.md
docs/templates/: awesome_claude_framework.md  claude_architecture.md  claude_components_workflow_analysis.md  repository_command_workflow_analysis.md  super_claude_framework.md
examples/: enhanced_prd_template.md  expert_prd_template.md  generated_template.md  improved_requirements_to_prd_template.md  product_manager_guide.md  requirements_to_prd_schema.json  requirements_to_prd_template.md  voice_analytics_schema.json
npm/ai-dlc-cli/: README.md  package.json
roo_prompts/: README.md
roo_prompts/features/: FEATURE_CHECKLIST.md  README.md
scripts/: check_env.py  check_env.sh  sync-cli-templates.sh
tests/: __init__.py
(+49 files in other folders)
